// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`simple math test 1 + 2 1`] = `
[
  "Add",
  [
    "Number",
    1,
  ],
  [
    "Number",
    2,
  ],
]
`;

exports[`simple math test 1 + 2 + 3 1`] = `
[
  "Add",
  [
    "Add",
    [
      "Number",
      1,
    ],
    [
      "Number",
      2,
    ],
  ],
  [
    "Number",
    3,
  ],
]
`;

exports[`simple math test 1 * 2 + 3 1`] = `
[
  "Add",
  [
    "Multiply",
    [
      "Number",
      1,
    ],
    [
      "Number",
      2,
    ],
  ],
  [
    "Number",
    3,
  ],
]
`;

exports[`simple math test 1 + 2 * 3 1`] = `
[
  "Add",
  [
    "Number",
    1,
  ],
  [
    "Multiply",
    [
      "Number",
      2,
    ],
    [
      "Number",
      3,
    ],
  ],
]
`;

exports[`simple math test (1 + 2) * 3 1`] = `
[
  "Multiply",
  [
    "Add",
    [
      "Number",
      1,
    ],
    [
      "Number",
      2,
    ],
  ],
  [
    "Number",
    3,
  ],
]
`;

exports[`simple math test 1 + -2 1`] = `
[
  "Add",
  [
    "Number",
    1,
  ],
  [
    "Negate",
    [
      "Number",
      2,
    ],
  ],
]
`;

exports[`simple math test 1 + -2 ^ 2 1`] = `
[
  "Add",
  [
    "Number",
    1,
  ],
  [
    "Exponentiate",
    [
      "Negate",
      [
        "Number",
        2,
      ],
    ],
    [
      "Number",
      2,
    ],
  ],
]
`;

exports[`simple math test 1 + -2 ^ 2! 1`] = `
[
  "Add",
  [
    "Number",
    1,
  ],
  [
    "Exponentiate",
    [
      "Negate",
      [
        "Number",
        2,
      ],
    ],
    [
      "Factorial",
      [
        "Number",
        2,
      ],
    ],
  ],
]
`;
